<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="ths_nopp"><u>Notes of Privacy Practices</u></string>
    <string name="action_settings">Settings</string>
    <string name="ths_vitals_prepare_visit_title">Prepare your visit</string>
    <string name="app_name">AmwellUapp</string>
    <string name="symptoms">Step 1 of 5: Symptoms</string>
    <string name="vitals">Step 2 of 5: Vitals</string>
    <string name="conditions">Step 4 of 5: Medical conditions</string>
    <string name="ths_vitals_follow_up_step_5">Step 5 of 5: Follow up</string>
    <string name="ths_invalid_phone_number">Please enter 10 digits phone number</string>
    <string name="ths_vitals_follow_up_step_5_description_text">Please provide a phone number for any follow up calls regarding this visit.</string>
    <string name="ths_vitals_follow_up_please_note">Please note that this phone number will also be used in case the connection with the provider gets lost.</string>
    <string name="ths_vitals_notice_privacy_policy_check_box_text">I have read and agree to the</string>
    <string name="ths_vitals_phone_number_text"> Phone number</string>
    <string name="help_visit">Please help us make your visit more efficient by sharing some details with us before your visit</string>
    <string name="visit_reason">What is the reason for your visit?</string>
    <string name="additional_comment">Additional comment</string>
    <string name="write_here">write here</string>
    <string name="ths_prepare_your_visit">Prepare for your visit</string>
    <string name="button_greaterthan"> &gt;</string>
    <string name="vitals_want">Do you want to share your vitals?</string>
    <string name="vitals_add_medication_text">Add medication</string>
    <string name="vitals_blood_pressure">Blood pressure </string>
    <string name="vitals_medication_description_text">Are you currently taking any medication(s)? If so, please add your medications to share with the provider</string>
    <string name="vitals_blood_pressure_text">(in mm HG)</string>
    <string name="vitals_temp_text">(in \u2109)</string>
    <string name="vitals_medications">Step 3 of 5: Medications</string>
    <string name="vitals_systolic">Systolic</string>
    <string name="vitals_diastolic">Diasystolic</string>
    <string name="temperature">Temperature</string>
    <string name="vitals_faranheit">Farenheit</string>
    <string name="vitals_f">oF</string>
    <string name="weight">Weight</string>
    <string name="vitals_weight_text">(in lbs)</string>
    <string name="vitals_ponds">Pounds</string>
    <string name="vitals_skip">Skip this step</string>
    <string name="ths_medical_conditions">Have you been diagnosed with any of these medical conditions?</string>
    <string name="google_maps_key">AIzaSyAvmDNdBPOJg_mW3qQH0s7D1wIq76BWEZk</string>
    <string name="ths_select_a_date_and_time">Select a Date and Time</string>
    <string name="inline_error_message_systolic_value">Please Enter values between 0 and 250</string>
    <string name="inline_error_message_temperature_value">Please Enter values between 0 and 120</string>
    <string name="inline_error_message_weight_value">Please Enter values between 0 and 500</string>
    <string name="ths_available_provider">Pick a time</string>
    <string name="ths_scedule_appointment">Schedule an appointment for</string>
    <string name="ths_practice_pick_subject">"To start a visit pick a subject"</string>
    <string name="ths_pick_time">Pick a time</string>
    <string name="ths_available_time_slots">Available time slots</string>
    <string name="ths_schedule_appointment_for">You have scheduled an appointment for</string>
    <string name="ths_set_remainder">Set a reminder</string>
    <string name="ths_set_button_text">Set</string>
    <string name="ths_got_it">Ok, got it!</string>
    <string name="ths_email_sent">We have sent a confirmation email to</string>
    <string name="ths_confirm">Confirm</string>
    <string name="ths_no_available_appointments">No available appointments</string>
    <string name="ths_select_date_and_time">Select date and time</string>
    <string name="ths_pick_a_provider">Pick a provider</string>
    <string name="ths_no_availability">No availability</string>
    <string name="ths_provider_details">Your provider</string>
    <string name="ths_with">With:</string>
    <string name="ths_select_other_provider">Your selected provider has no appointments on this date. Please pick another date or choose from the available provider</string>
    <string name="pth_webview_test"><html><p>The US and South Korea have held a ballistic missile drill, after North Korea tested a long-range missile experts believe may reach Alaska.
Self-restraint was all that separated armistice and war and could be changed at any time, the two allies said.
It would be a "grave mistake" for the North to think otherwise, they said.</p><p>China and Russia have urged the North to suspend its weapons programme in exchange for a halt to US-South Korean military exercises.
The launch, the latest in a series of tests, was in defiance of a ban by the UN Security Council.
The US has asked for an urgent meeting of the UNSC to discuss the issue. A closed-door session of the 15-member body will take place later on Wednesday.
Pyongyang claimed on Tuesday to have successfully tested an intercontinental ballistic missile (ICBM).
However, most experts believe that the North does not yetof visits scheduled have long-range nuclear weapon capabilities.
The two Koreas are technically still at war as the 1950-1953 Korean War ended in an armistice.
How have the US and South Korea responded?</p>The allies conducted a ballistic missile fire exercise in the Sea of Japan.South Korean President Moon Jae-in said allies needed to demonstrate their missile defence posture with action, not just a statement, his office said.Is the new missile test a game-changer?Can the US defend itself against North Korea?Have North Korea missile tests paid off? What can the outside world do? Meanwhile in a joint statement Gen Vincent Brooks, commander of US forces Korea, and South Korean Joint Chiefs Chairman Gen Lee Sun-jin said the allies were maintaining patience and self-restraint, but this could change.</html></string>
    <string name="schedule_appointment">Schedule an appointment</string>
    <string name="get_started">Get started</string>
    <string name="ths_continue">Continue</string>
    <string name="ths_select_time">Select a timeslot</string>
    <string name="cancel">Cancel</string>
    <string name="ths_choose_pharmacy_button_text">Choose pharmacy</string>
    <string name="ths_retail_button_text">Retail</string>
    <string name="ths_mail_order_pharmacy_button_text">Mail order</string>
    <string name="pharmacy_shipping_fragment_name">Pharmacy and Shipping</string>
    <string name="pharmacy_list_fragment_name">Pharmacy List</string>
    <string name="search_pharmacy_fragment_name">Your pharmacy</string>
    <string name="shipping_address_fragment_name">Ship prescriptions to</string>
    <string name="pharmacy_search_label">Which pharmacy should we send prescriptions to</string>
    <string name="pharmacy_search_edittext_hint">Type location or zip code</string>
    <string name="ths_pharmacy_medications_sent_to_text">Medications will be sent to</string>
    <string name="ths_pharmacy_prescriptions_sent_to">Prescriptions will be sent to</string>
    <string name="ths_continue_button_text">Continue</string>
    <string name="ths_pharmacy_phone_text">phone: </string>
    <string name="ths_pharmacy_email_text">email: </string>
    <string name="ths_pharmacy_preferred_pharmacy_update">Preferred pharmacy updated</string>
    <string name="ths_pharmacy_fetch_validation_error">Pharmacy list fetch validation error</string>
    <string name="ths_pharmacy_fetch_error">Unable to fetch pharmacy list</string>
    <string name="ths_address_shipping_address_string">Shipping address</string>
    <string name="ths_address_address_line_one">Address line 1</string>
    <string name="ths_address_enter_first_address_line">Enter first address line</string>
    <string name="ths_address_address_line_two">Address line 2</string>
    <string name="ths_address_optional_string">(optional)</string>
    <string name="ths_address_town_city_string">Town/City</string>
    <string name="ths_address_enter_town_city">Enter your town or city</string>
    <string name="ths_address_postal_code_string">Postal code</string>
    <string name="ths_address_state_string">State</string>
    <string name="ths_ok_continue_button_string">Ok,continue</string>
    <string name="ths_address_validation_empty_string">Address line cannot be empty</string>
    <string name="ths_address_validation_length_string">Address should contain between 2 and 25 characters</string>
    <string name="ths_address_validation_city_empty_string">City cannot be empty</string>
    <string name="ths_address_validation_city_length_string">City should contain between 2 and 25 characters</string>
    <string name="ths_address_billing_address_string">Billing Address</string>
    <string name="provider_available">Available now</string>
    <string name="provider_offline">Schedule appointment</string>
    <string name="provider_available_timeslots">Available timeslots</string>
    <string name="provider_busy">Patient waiting</string>
    <string name="provider_list_title">See a provider</string>
    <string name="ths_provider_list_header_text_one">See the first available provider</string>
    <string name="ths_provider_list_header_text_two">See a provider for an online visit, at your convenience</string>
    <string name="ths_provider_pick_provider_text">Or pick one of these providers</string>
    <string name="ths_practice_screen_title">Start</string>
    <string name="ths_choose_area_of_medicine_title">Choose an area of medicine</string>
    <string name="ths_rb_no_reminder">No Reminder</string>
    <string name="ths_rb_15_mins_reminder">15 minutes before</string>
    <string name="ths_rb_one_hour_before">1 hour before</string>
    <string name="ths_rb_four_hours_before">4 hours before</string>
    <string name="ths_rb_eight_hours_before">8 hours before</string>
    <string name="ths_rb_one_day_before">1 day before</string>
    <string name="ths_rb_one_week_before">1 week before</string>
    <string name="ths_customer_support_can_we_help_you_with_something">Can we help you with something?</string>
    <string name="ths_customer_support_call_or_mail">If you need any assistance you can call or mail the amwell support team.</string>
    <string name="ths_customer_support_for_support">For support:</string>
    <string name="ths_customer_support_phone_number">800-552-4111</string>
    <string name="ths_customer_support_mail">ugrow.support@americanwell.com</string>
    <string name="ths_video_consults">Video consults in just minutes, right on your smartphone \n<u>See how it works</u></string>
    <string name="ths_service_provider">This service is provided by</string>
    <string name="ths_amwell_philips_licence">All providers are licenced and working under \n<u>Amwell terms &amp; conditions</u></string>
    <string name="ths_see_provider_pre_welcome">See <b>a provider online,</b> anytime</string>
    <string name="ths_terms_and_conditions">Terms and conditions</string>
    <string name="take_tour">Take a tour</string>
    <string name="skip">Skip</string>
    <string name="onboarding_tour_header">See <b>a provider online,</b> anytime</string>
    <string name="onboarding_tour_video_consults">Video consults in just minutes, right on your smart phone.</string>
    <string name="onboarding_tour_service_is_provided">This service is provided by</string>
    <string name="onboarding_tour_curious">Curious how it works?</string>
</resources>