<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/ll_top"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <com.philips.platform.uid.view.widget.Label
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="32sp"
                android:text="@string/onboarding_tour_header"
                />

            <com.philips.platform.uid.view.widget.Label
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/onboarding_tour_video_consults"
                />

            <com.philips.platform.uid.view.widget.Label
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/onboarding_tour_service_is_provided"
                />

            <ImageView
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@mipmap/amwell_white_logo"
                />

        </LinearLayout>


    <LinearLayout
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.philips.platform.uid.view.widget.Label
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/onboarding_tour_curious"
                />

            <com.philips.platform.uid.view.widget.Button
                android:id="@+id/btn_take_tour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/take_tour"
                />

            <com.philips.platform.uid.view.widget.Label
                android:id="@+id/tv_skip"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/skip"
                android:layout_gravity="center_horizontal"
                />

        </LinearLayout>
</RelativeLayout>
