<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ths_pre_welcome_screen"
    android:layout_width="match_parent"
    android:paddingTop="@dimen/ths_image_size"
    android:paddingBottom="@dimen/ths_margin_bottom_more_details"
    android:paddingLeft="@dimen/ths_fab_margin"
    android:paddingRight="@dimen/ths_fab_margin"
    android:background="@mipmap/ths_pre_welcome_image"
    android:layout_height="match_parent">

    <com.philips.platform.uid.view.widget.Label
        android:id="@+id/ths_see_a_provider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ths_body_text_pre_welcome_bold"
        android:layout_marginBottom="@dimen/ths_fab_margin"
        android:text="@string/ths_see_provider_pre_welcome"
        />
    <com.philips.platform.uid.view.widget.Label
        android:id="@+id/ths_video_consults"
        android:layout_below="@id/ths_see_a_provider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ths_video_consults"
        style="@style/ths_body_text_pre_welcome"
        />

    <com.philips.platform.uid.view.widget.Label
        android:id="@+id/ths_service_provider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ths_video_consults"
        android:text="@string/ths_service_provider"
        style="@style/ths_body_text_pre_welcome"
        android:layout_marginBottom="@dimen/ths_margin_top"
        />
    <ImageView
        android:id="@+id/ths_amwell_brand"
        android:layout_below="@id/ths_service_provider"
        android:layout_width="wrap_content"
        android:src="@mipmap/amwell_white_logo"
        android:layout_height="wrap_content" />

    <com.philips.platform.uid.view.widget.Button
        android:id="@+id/ths_go_see_provider"
        android:text="@string/ths_terms_and_conditions"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/ths_fab_margin"
        android:layout_height="wrap_content" />


    <com.philips.platform.uid.view.widget.Label
        android:id="@+id/ths_licence"
        android:layout_above="@id/ths_go_see_provider"
        android:text="@string/ths_amwell_philips_licence"
        style="@style/ths_body_text_pre_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>
